test: refactor various test classes to improve clarity and consistency